# Fixes

* Fix Variant Selector having a deadzone when you have lots of variants (copygirl)
* Fix Variant Selector pick-block edge cases (copygirl)
* Show unstackable blocks (like beds) in the Usage Ticker (copygirl)
* Fix unintended problems with non-English locales
* Fix Redstone Randomizer not sending enough block updates
* Fix a pretty bad bug with pickarangs

# Translations

* Update English spelling variants in `en_gb` and `en_nz` (Qwerty97475)
* Update Chinese localization (Hanekmio, qznfbnj)
* Fix invalid JSON in uk_ua language file